Removed Unwanted methods and all