@@ -2,16 +2,11 @@ package com.edstem.blogapp.service;
 
 import com.edstem.blogapp.contract.request.ListPostRequest;
 import com.edstem.blogapp.contract.request.PostRequest;
-import com.edstem.blogapp.contract.request.PostSummaryRequest;
 import com.edstem.blogapp.contract.response.PostResponse;
+import com.edstem.blogapp.contract.response.PostSummaryResponse;
 import com.edstem.blogapp.exception.EntityNotFoundException;
 import com.edstem.blogapp.model.post.Post;
-import com.edstem.blogapp.model.post.PostStatus;
 import com.edstem.blogapp.repository.PostRepository;
-import com.edstem.blogapp.repository.UserRepository;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.Conditions;
@@ -22,13 +17,16 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 @Slf4j
 @RequiredArgsConstructor
 @Transactional
 public class PostService {
     private final PostRepository postRepository;
-    private final UserRepository userRepository;
     private final ModelMapper modelMapper;
 
     public PostResponse createPost(PostRequest request) {
@@ -39,7 +37,6 @@ public class PostService {
                         .categories(request.getCategories())
                         .codeSnippet(request.getCodeSnippet())
                         .createdTime(LocalDateTime.now())
-                        .status(PostStatus.ACTIVE)
                         .build();
         Post savedPost = postRepository.save(post);
         return modelMapper.map(savedPost, PostResponse.class);
@@ -69,14 +66,14 @@ public class PostService {
         String lowerCaseCategory = category.toLowerCase();
 
         List<Post> posts =
-                postRepository.findAll().stream()
+                postRepository.findByCategoriesContaining(category).stream()
                         .filter(
                                 post ->
                                         post.getCategories().stream()
                                                 .map(String::toLowerCase)
-                                                .collect(Collectors.toList())
+                                                .toList()
                                                 .contains(lowerCaseCategory))
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (posts.isEmpty()) {
             throw new EntityNotFoundException("No posts found for category: " + category);
@@ -97,7 +94,6 @@ public class PostService {
     }
 
     public List<PostResponse> searchPosts(String query, Sort sort) {
-        Sort defaultSort = Sort.by(Sort.Direction.DESC, "id");
         List<Post> responses = postRepository.searchPosts(query, sort);
 
         if (responses.isEmpty()) {
@@ -109,17 +105,14 @@ public class PostService {
                 .collect(Collectors.toList());
     }
 
-    public List<PostSummaryRequest> listPosts(ListPostRequest request) {
-        Pageable page =
-                PageRequest.of(
-                        request.getPageNumber(),
-                        request.getPageSize(),
-                        Sort.by("updatedTime").descending());
+    public List<PostSummaryResponse> listPosts(ListPostRequest request) {
+        Pageable page = PageRequest.of(request.getPageNumber(),
+                request.getPageSize(), Sort.by(Sort.Direction.DESC, "updatedTime","createdTime"));
 
         log.info("Request {} for list posts is ", request);
-        List<PostSummaryRequest> posts =
-                postRepository.findAllByStatusNot(PostStatus.INACTIVE, page).stream()
-                        .map(post -> modelMapper.map(post, PostSummaryRequest.class))
+        List<PostSummaryResponse> posts =
+                postRepository.findAll(page).stream()
+                        .map(post -> modelMapper.map(post, PostSummaryResponse.class))
                         .collect(Collectors.toList());
 
         log.info("Fetched {} posts", posts.size());
@@ -128,7 +121,7 @@ public class PostService {
 
     public Long postsCount(ListPostRequest request) {
         log.info("Request {} for list post is ", request);
-        Long postCount = postRepository.countByStatusNot(PostStatus.INACTIVE);
+        Long postCount = postRepository.count();
 
         log.info("Fetched all posts - count {}", postCount);
         return postCount;
